# ChemEx

./: .codacy.yml  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.html  BASELINE_PERFORMANCE_ANALYSIS.md  CACHE_TESTING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LMFIT_INVESTIGATION_SUMMARY.md  MANIFEST.in  Makefile  OPTIMIZATION_STATUS_REPORT.md  OPTIMIZATION_SUMMARY.md  PKG-INFO  README.md  README_LMFIT_INVESTIGATION.md  appveyor.yml  environment.yml  ez_setup.py  index.html  lmfit_analysis.md  lmfit_code_patterns.md  lmfit_methods_summary.md  opensearch.xml  params.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  versioneer.py
.circleci/: config.yml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: close_stale_issues_pr.yml  deploy.yml  publish-to-pypi.yml  python-publish.yml  python-test.yml  test-deploy.yml  test.yml  website-deploy.yml  website-test.yml
assets/css/: styles.0e681b5d.css  styles.2d972e0f.css  styles.4526ef66.css  styles.483fc44f.css  styles.66b1f609.css  styles.6c6c9c5c.css  styles.be729102.css  styles.cc05b487.css  styles.f4368d34.css  styles.f6d38a81.css
assets/js/: 0474c90d.10cf17cc.js  0474c90d.2b7861ec.js  0474c90d.2e535cd4.js  0474c90d.3402459b.js  0474c90d.4293cd34.js  0474c90d.65f1c24f.js  0474c90d.72007ca6.js  0474c90d.928bdd8b.js  0a681712.0d319454.js  0a681712.0e8d6bb7.js  0a681712.2418108b.js  0a681712.34bf18b3.js  0a681712.56099032.js  0a681712.7435a30d.js  0a681712.81543f82.js  0a681712.988e1d4d.js  0a681712.e7a106a0.js  0c727e65.25f53329.js  0c727e65.34f483f5.js  0c727e65.669ad363.js  0c727e65.7a11dbff.js  0c727e65.99979519.js  0c727e65.a4855889.js  0c727e65.ae811cde.js  0c727e65.dfb19d83.js  0ffd1497.622a7e99.js  0ffd1497.62c99d00.js  0ffd1497.92461b57.js  0ffd1497.a5d52592.js  0ffd1497.e0e442be.js  0ffd1497.f54ef774.js  0ffd1497.f5696cfb.js  0ffd1497.fd0ac188.js  11049f4e.3507dd3a.js  11049f4e.3744ef27.js  11049f4e.398fbc54.js  11049f4e.4911b15c.js  11049f4e.714c6742.js  11049f4e.97ad611f.js  11049f4e.a8dd6acf.js  (+564 more)
benchmarks/: README.md  __init__.py  analyze_cpmg_phases.py  baseline_results.txt  benchmark_bottlenecks.py  benchmark_endtoend.py  benchmark_framework.py  benchmark_liouvillian_construction.py  benchmark_real_cpmg.py  check_hermitian.py  monitor_cache.py  optimized_results.txt  profile_cpmg_calculate.py  profile_loop_overhead.py  profile_real_workflow.py  quick_cache_test.sh  run_benchmarks.py  test_cache_direct.py  test_liouvillian_hermiticity.py  test_matmul_alternatives.py  test_propagator_cache.py  validate_cache_accuracy.py  validate_vectorization.py  verify_hermitian.py
chemex/: __init__.py  __main__.py  _version.py  caching.py  chemex.py  chi2.py  cli.py  constants.py  datasets.py  filterers.py  fitting.py  helper.py  lru_cache.py  messages.py  model.py  parameters.py  parsing.py  peaks.py  plot.py  plotting.py  reading.py  toml.py  tools.py  typing.py  uncertainty.py  util.py  utils.py  version.py  writing.py
chemex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chemex/backports/: functools_lru_cache.py
chemex/bases/: full_2st.py  full_3st.py  iph_2st.py  iph_3st.py  iph_aph_2st.py  iph_aph_3st.py  iph_xy_2st.py  iph_xy_3st.py  mq_2st.py  mq_3st.py  ref.py  ref_eq.py  util.py
chemex/configuration/: base.py  conditions.py  data.py  experiment.py  methods.py  parameters.py  utils.py
chemex/containers/: cest.py  conditions.py  cpmg.py  data.py  dataset.py  experiment.py  experiments.py  helper.py  noise.py  plot.py  profile.py  relaxation.py  schema.py  shift.py
chemex/experiments/: __init__.py  abc_profile.py  base_data_point.py  base_intensity.py  base_profile.py  builder.py  cest_13c.py  cest_15n.py  cest_15n_cw.py  cest_15n_tr.py  cest_1hn_ap.py  cest_1hn_ip_ap.py  cest_ch3_1h_ip_ap.py  configurations.py  coscest_1hn_ip_ap.py  cpmg_13c_ip.py  cpmg_13co_ap.py  cpmg_15n_ip.py  cpmg_15n_ip_0013.py  cpmg_15n_tr.py  cpmg_15n_tr_0013.py  cpmg_1hn_ap.py  cpmg_1hn_ap_0013.py  cpmg_ch3_13c_h2c.py  cpmg_ch3_1h.py  cpmg_ch3_1h_dq.py  cpmg_ch3_1h_sq.py  cpmg_ch3_1h_tq.py  cpmg_ch3_1h_tq_dif.py  cpmg_ch3_1h_tq_diff.py  cpmg_ch3_mq.py  cpmg_chd2_1h_ap.py  cpmg_hn_dq_zq.py  cpmg_hn_zq_dq.py  datasets.py  dcest_13c.py  dcest_15n.py  descriptions.py  factories.py  helper.py  (+10 more)
chemex/models/: constraints.py  factory.py  loader.py  model.py
chemex/nmr/: basis.py  constants.py  helper.py  liouvillian.py  propagator.py  rates.py  spectrometer.py  spin_system.py
chemex/optimize/: fitting.py  gridding.py  grouping.py  helper.py  methods.py  minimizer.py
chemex/parameters/: __init__.py  database.py  factory.py  helper.py  kinetics.py  liouvillian.py  name.py  setting.py  settings.py  spin_system.py  spins.py  userfunctions.py
chemex/plotters/: __init__.py  cest.py  cpmg.py  exsy.py  plot.py  plotter.py  relaxation.py  shift.py
chemex/printers/: data.py  parameters.py  plot.py
chemex/spindynamics/: basis.py  constants.py  default.py  util.py
chemex/tools/: __init__.py  pick_cest.py  plot_param.py
conda.recipe/: meta.yaml
docs/: rebuild_docs.sh  requirements.txt
docs/development/: mcmc-implementation-plan.md
docs/examples/: index.html
docs/experiments/: index.html
docs/getting_started/: index.html
docs/introduction/: index.html
docs/source/: additional.rst  citation.rst  conf.py  develop.rst  examples.rst  experiments.rst  index.rst  py-modindex.rst  start.rst  tutorial.rst
examples/: chemex_examples.py
hooks/: hook-chemex.experiments.py
img/: logo-nmr-dark.afdesign
search/: index.html
tests/: __init__.py  test_analysis_session.py  test_chemex.py  test_cli.py  test_constraint_expressions.py  test_data.py  test_execution.py  test_experiments_selection.py  test_grid_entries.py  test_mcmc.py  test_output_paths.py  test_plot_printers.py  test_profile_cache.py  test_run_info.py  test_simulation_plotters.py  test_spin_system.py  test_toml_io.py
website/: .eslintrc.json  docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+9222 files in other folders)
