[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "chemex"
description = "An analysis program for chemical exchange detected by NMR"
authors = [
  { name = "Guillaume Bouvignies", email = "guillaume.bouvignies@ens.psl.eu" },
]
dependencies = [
    "annotated-types>=0.7.0",
    "cachetools>=5.5.1",
    "emcee>=3.1.6",
    "lmfit>=1.3.2",
    "matplotlib>=3.10.0",
    "numdifftools>=0.9.41",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "rapidfuzz>=3.12.1",
    "rich>=13.9.4",
    "scipy>=1.15.2",
]
requires-python = ">=3.12"
readme = "README.md"
dynamic = ["version"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["NMR", "chemical exchange", "spectroscopy", "analysis"]
license = { file = "LICENSE.md" }

[project.urls]
Homepage = "http://gbouvignies.github.io/ChemEx/"
Documentation = "http://gbouvignies.github.io/ChemEx/"
Repository = "https://github.com/gbouvignies/chemex"
Changelog = "https://github.com/gbouvignies/chemex/releases"

[project.scripts]
chemex = "chemex.chemex:main"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"
bump = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "ISC001",
  "TC001",
  "TC002",
  "TC003",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "S311",
  "PD011",
]

[tool.ruff.isort]
known-first-party = ["chemex"]

[tool.pyright]
venvPath = "."
venv = ".venv"
