[project]
name = "chemex"
version = "2026.01.0"
description = "An analysis program for chemical exchange detected by NMR"
authors = [
  { name = "Guillaume Bouvignies", email = "guillaume.bouvignies@ens.psl.eu" },
]
dependencies = [
  "annotated-types>=0.7.0",
  "cachetools>=5.5.1",
  "emcee>=3.1.6",
  "lmfit>=1.3.2",
  "matplotlib>=3.10.0",
  "numdifftools>=0.9.41",
  "numpy>=2.2.3",
  "pydantic>=2.10.6",
  "rapidfuzz>=3.12.1",
  "rich>=13.9.4",
  "scipy>=1.15.2",
]
# Python 3.11+ supported for broader compatibility (development/testing)
# Python 3.13 is the recommended version for best performance in production
# Python 3.14 support is experimental (tested in CI but may have ecosystem issues)
# TODO: Evaluate minimum version requirements during optimization work
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",  # Experimental - ecosystem catching up
  "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["NMR", "chemical exchange", "spectroscopy", "analysis"]
license = "GPL-3.0-or-later" # SPDX expression
license-files = ["LICENSE.md"] # list of paths or globs

[project.urls]
Homepage = "http://gbouvignies.github.io/ChemEx/"
Documentation = "http://gbouvignies.github.io/ChemEx/"
Repository = "https://github.com/gbouvignies/chemex"
Changelog = "https://github.com/gbouvignies/chemex/releases"

[project.scripts]
chemex = "chemex.chemex:main"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "ISC001",
  "TC001",
  "TC002",
  "TC003",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "S311",
  "PD011",
]

[tool.ruff.lint.isort]
known-first-party = ["chemex"]

[tool.ty.src]
# Exclude work-in-progress experimental code
exclude = ["src/chemex/experiments/catalog/wip/"]

[tool.ty.rules]
# Downgrade warnings to avoid failing CI
possibly-missing-attribute = "warn"

[build-system]
requires = ["uv_build>=0.8.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "scipy-stubs>=1.16.2.3",
    "ty>=0.0.1a22",
    "types-cachetools>=6.2.0.20250827",
]
