[project]
name = "chemex"
version = "2026.04.0"
description = "An analysis program for chemical exchange detected by NMR"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"  # SPDX expression
license-files = ["LICENSE.md"]  # list of paths or globs
authors = [
  { name = "Guillaume Bouvignies", email = "guillaume.bouvignies@ens.psl.eu" },
]
keywords = ["NMR", "analysis", "chemical exchange", "spectroscopy"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",  # Experimental - ecosystem catching up
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "annotated-types>=0.7.0",
  "cachetools>=5.5.1",
  "emcee>=3.1.6",
  "lmfit>=1.3.2",
  "matplotlib>=3.10.0",
  "numdifftools>=0.9.41",
  "numpy>=2.2.3",
  "pydantic>=2.10.6",
  "rapidfuzz>=3.12.1",
  "rich>=13.9.4",
  "scipy>=1.15.2",
]

[project.urls]
Changelog = "https://github.com/gbouvignies/chemex/releases"
Documentation = "http://gbouvignies.github.io/ChemEx/"
Homepage = "http://gbouvignies.github.io/ChemEx/"
Repository = "https://github.com/gbouvignies/chemex"

[project.scripts]
chemex = "chemex.chemex:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "scipy-stubs>=1.16.2.3",
  "ty>=0.0.1a22",
  "types-cachetools>=6.2.0.20250827",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = ["benchmarks", "src/chemex/experiments/catalog/wip"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A002",
  "ANN002",
  "ANN003",
  "ANN201",
  "ANN401",
  "ARG002",
  "COM812",
  "D1",
  "D203",
  "D213",
  "D401",
  "D417",
  "E402",
  "E501",
  "ERA001",
  "FBT001",
  "FBT002",
  "FIX002",
  "ISC001",
  "PGH003",
  "PLC0415",
  "PLR0913",
  "PLR2004",
  "RET504",
  "RUF002",
  "RUF003",
  "RUF034",
  "S307",
  "TC001",
  "TC002",
  "TC003",
  "TD002",
  "TD003",
  "S311",
  "PD011",
]

[tool.ruff.lint.isort]
known-first-party = ["chemex"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "N806", "PLC0415", "PLR2004", "S101"]

[tool.ty.src]
# Exclude work-in-progress experimental code
exclude = ["benchmarks/", "src/chemex/experiments/catalog/wip/", "tests/"]

[tool.ty.rules]
# Downgrade warnings to avoid failing CI
possibly-missing-attribute = "ignore"
