[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = chemex/_version.py
versionfile_build = chemex/_version.py
tag_prefix =
parentdir_prefix = chemex-

[isort]
known_first_party = chemex
force_sort_within_sections = True
skip = versioneer.py, _version.py, chemex.py

[yapf]
based_on_style = pep8
column_limit = 100
